# ci-monitoring-simulation

./: ARCHITECTURE.md  CITATION.cff  LICENSE  Makefile  README.md  architecture.html  claims_manifest.json  make_ci_vs_power.py  make_claims_manifest.py  make_morris.py  make_paper2_sensitivity.py  plot_paper_figs.py  pyproject.toml  test_all.py
.github/workflows/: tests.yml
cimonitoring/: __init__.py  anomaly_model.py  carbon_layer.py  monitoring.py  monitoring_anchored.py  sensitivity.py
data/: ci_vs_power.csv  morris_screening.csv  paper2_sensitivity.csv  sweep1_latency.csv  sweep2_sampling.csv  sweep3_roc.csv  sweep4_archetypes.csv  sweep5_threshold_types.csv  sweep6_attribution.csv  sweep7_ramp_time.csv  sweep9_ramp_transition_200seed.csv
docs/: parameter_provenance.md
notebooks/: quickstart.ipynb
paper2_anchored_detector/: README.md  anomaly_model.py  carbon_layer.py  energy_substrate.py  energy_substrate_real.py  extract_brillinger_profiles.py  monitoring.py  monitoring_anchored.py  run_paper2_comparators.py  run_paper2_main.py  run_paper2_multiseverity.py  run_paper2_realdata.py  sensitivity.py  sweep_cusum_roc.py
paper2_anchored_detector/results/: brillinger_validation.csv  cusum_roc.csv  paper2_comparators_summary.csv  paper2_realdata_summary.csv
paper3_agentic_governance/: CITATION.cff  LICENSE  NOTICE-DATA.md  README.md  REUSE.toml  SPEC_NOTES.md  requirements.txt
paper3_agentic_governance/LICENSES/: CC-BY-4.0.txt
simulation/: anomaly_model.py
tests/: conftest.py  test_all.py  test_pipeline.py  test_repo_integrity.py
(+31 files in other folders)
